Added django autoslug package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.2.7"
+django-autoslug = "^1.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
