--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 Django = "^4.2.7"
 django-autoslug = "^1.9.9"
 django-tailwind = "^3.6.0"
+shortuuid = "^1.0.11"
 
 
 [tool.poetry.group.dev.dependencies]
