--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ shortuuid = "^1.0.11"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.0"
+faker = "^20.1.0"
 
 [build-system]
 requires = ["poetry-core"]
