--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ shortuuid = "^1.0.11"
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.0"
 faker = "^20.1.0"
+django-debug-toolbar = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core"]
