--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pillow = "^10.1.0"
 python-dotenv = "^1.0.0"
 faker = "^20.1.0"
 django-debug-toolbar = "^4.2.0"
+django-browser-reload = "^1.12.1"
 
 [build-system]
 requires = ["poetry-core"]
