--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,7 +6,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: .docker/Dockerfile.dev
     restart: always
     command: ["poetry", "run", "python", "manage.py", "runserver", "0.0.0.0:8000"]
     ports:
