--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-autoslug = "^1.9.9"
 django-tailwind = "^3.6.0"
 shortuuid = "^1.0.11"
 pillow = "^10.1.0"
+gunicorn = "^21.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
