--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-tailwind = "^3.6.0"
 shortuuid = "^1.0.11"
 pillow = "^10.1.0"
 gunicorn = "^21.2.0"
+django-htmx = "^1.17.2"
 
 
 [tool.poetry.group.dev.dependencies]
