--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ shortuuid = "^1.0.11"
 pillow = "^10.1.0"
 gunicorn = "^21.2.0"
 django-htmx = "^1.17.2"
+dj-database-url = "^2.1.0"
+psycopg = "^3.1.18"
 
 
 [tool.poetry.group.dev.dependencies]
