--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,23 @@
 [tool.poetry]
-name = "quotes"
+name = "quotesapp"
 version = "0.1.0"
 description = ""
-authors = ["Aman Rawat <ar.rawataman@gmail.com>"]
+authors = ["Aman Rawat <kirmolaa@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-Django = "^4.2.7"
-django-autoslug = "^1.9.9"
-django-tailwind = "^3.6.0"
-shortuuid = "^1.0.11"
-pillow = "^10.1.0"
-gunicorn = "^21.2.0"
-django-htmx = "^1.17.2"
+python = "^3.12"
+django = "^5.0.6"
+django-tailwind = "^3.8.0"
+django-htmx = "^1.17.3"
 dj-database-url = "^2.1.0"
-psycopg = "^3.1.18"
+django-autoslug = "^1.9.9"
+shortuuid = "^1.0.13"
 
 
 [tool.poetry.group.dev.dependencies]
-python-dotenv = "^1.0.0"
-faker = "^20.1.0"
-django-debug-toolbar = "^4.2.0"
+python-dotenv = "^1.0.1"
+django-debug-toolbar = "^4.3.0"
 django-browser-reload = "^1.12.1"
 
 [build-system]
