--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dj-database-url = "^2.1.0"
 django-autoslug = "^1.9.9"
 shortuuid = "^1.0.13"
 pillow = "^10.3.0"
+django-minify-html = "^1.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
