--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-autoslug = "^1.9.9"
 shortuuid = "^1.0.13"
 pillow = "^10.3.0"
 django-minify-html = "^1.7.1"
+django-distill = "^3.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
