--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -26,8 +26,8 @@ jobs:
         with:
           node-version: 18
       - run: |
-          poetry run python3 manage.py tailwind install
-          poetry run python3 manage.py tailwind build
+          poetry run python3 manage.py tailwind install --settings=quotesapp.settings.prod
+          poetry run python3 manage.py tailwind build --settings=quotesapp.settings.prod
 
       - name: Build Static Site
         run: poetry run python3 .\manage.py distill-local public --collectstatic --force --settings=quotesapp.settings.prod
