--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -13,9 +13,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.13.0-beta.1' 
+      # - uses: actions/setup-python@v5
+      #   with:
+      #     python-version: '3.12' 
       - run: |
           pipx install poetry
 
