--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -16,8 +16,8 @@ jobs:
       # - uses: actions/setup-python@v5
       #   with:
       #     python-version: '3.12' 
-      - run: |
-          pipx install poetry
+      # - run: |
+      #     pipx install poetry
 
 
       - name: Install dependencies
