--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -13,15 +13,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      # - uses: actions/setup-python@v5
-      #   with:
-      #     python-version: '3.12' 
-      # - run: |
-      #     pipx install poetry
-
-
-      - name: Install dependencies
-        run: poetry install
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12' 
+      - run: |
+          pipx install poetry
+          poetry install
 
       - uses: actions/setup-node@v4
         with:
