--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -5,7 +5,6 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-  workflow_dispatch:
 
 jobs:
   build_project:
@@ -13,9 +12,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 18
       # - uses: actions/setup-python@v5
       #   with:
       #     python-version: '3.12' 
@@ -23,10 +19,14 @@ jobs:
       #     pipx install poetry
 
 
-      - name: Install dependencies
-        run: |
+      # - name: Install dependencies
+      #   run: poetry install
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - run: |
           pipx install poetry
-          poetry install
           poetry run python3 manage.py tailwind install --settings=quotesapp.settings.prod
           poetry run python3 manage.py tailwind build --settings=quotesapp.settings.prod
 
