now using netlify cli

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -37,15 +37,9 @@ jobs:
         run: poetry run python3 manage.py distill-local public --collectstatic --force --settings=quotesapp.settings.prod
 
       - name: Deploy to Netlify
-        uses: nwtgck/actions-netlify@v3.0
+        uses: netlify/actions/cli@master
         with:
-          publish-dir: './public'
-          production-branch: main
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: "Deploy from GitHub Actions"
-          enable-pull-request-comment: false
-          enable-commit-comment: true
-          overwrites-pull-request-comment: true
+          args: deploy --dir=public
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
