--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build_project:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v4
@@ -37,10 +37,15 @@ jobs:
         run: poetry run python3 manage.py distill-local public --collectstatic --force --settings=quotesapp.settings.prod
 
       - name: Deploy to Netlify
-        uses: South-Paw/action-netlify-cli@v2
-        id: netlify
+        uses: nwtgck/actions-netlify@v3.0
         with:
-          args: 'deploy --json --dir \"./public\" --message \"draft [${{ github.sha }}]\"'
+          publish-dir: './public'
+          production-branch: main
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          deploy-message: "Deploy from GitHub Actions"
+          enable-pull-request-comment: false
+          enable-commit-comment: true
+          overwrites-pull-request-comment: true
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
